--- a/evaluation.tex
+++ b/evaluation.tex
@@ -1,4 +1,5 @@
 \chapter{Model evaluation}
+\label{chap:evaluation}
 
 \chapterprecishere{%
   {\fontspec[Scale=2]{Symbola}\color{black!80}\symbol{"1F5E1}}
