--- a/inductive.tex
+++ b/inductive.tex
@@ -1,4 +1,5 @@
 \chapter{Statistical learning theory}
+\label{chap:slt}
 
 \chapterprecishere{%
   To  understand  God's  thoughts  we  must study statistics, for these are the measure of His purpose.
