--- a/tasks.tex
+++ b/tasks.tex
@@ -1,4 +1,5 @@
 \chapter{Machine learning tasks}
+\label{chap:ml}
 
 \chapterprecishere{%
   They say ``Na prática, a teoria é outra,'' I say ``Se sua teoria não funciona na
