--- a/main.tex
+++ b/main.tex
@@ -24,6 +24,8 @@
 
 \DeclareMathOperator*{\argmax}{arg\,max}
 \DeclareMathOperator*{\argmin}{arg\,min}
+\DeclareMathOperator{\Prob}{P}
+\DeclareMathOperator{\E}{E}
 
 \usepackage{cleveref}
 \newcommand\pcref[1]{(\cref{#1})}
